# progr_paralela

./: 06_FractalMP  PracticaPrueba2_CondoloByron.rar  PracticaPrueba_Condolo_Rosero.rar
01_FRACTAL_JULIA/: CMakeLists.txt  fractal_openmp.cpp  fractal_openmp.h  fractal_serial.cpp  fractal_serial.h  fractal_simd.cpp  fractal_simd.h  main.cpp
03_Fractal-DLL/: CMakeLists.txt  comandos.txt  fractal_simd.cpp  fractal_simd.h  palette.cpp
04_Ejemplo-OpenMP/: CMakeLists.txt  main.cpp
05_Ejemplo_MPI/: CMakeLists.txt  PracticaFinalPrueba.cpp  Prueba.cpp  Prueba2.cpp  Prueba3.cpp  Prueba4.cpp  PruebaColectivo1.cpp  PruebaColectivo2.cpp  PruebaColectivoFile.cpp  PruebaColectivoImagen.cpp  datos.txt  ejercicioImagen.cpp  ejercicioImagen2.cpp  ejercicioPrueba.cpp  main.cpp  matrices_mult.cpp
06_FractalMPI/: CMakeLists.txt  fractal_mpi.cpp  main.cpp  prender_led.py
07_cuda/: CMakeLists.txt
CorreccionPrueba1/: fractal_mpi.cpp  fractal_mpi.h  main.cpp
CorreccionPrueba2/: fractal_mpi.cpp  fractal_mpi.h  main.cpp
Ejemplo001/: CMakeLists.txt  main.cpp
PracticaPrueba/: CMakeLists.txt  Prueba.cpp
PracticaPrueba2/: CMakeLists.txt  escala.cpp  escala.h  main.cpp
PracticaPruebaMitad/: CMakeLists.txt  escala.cpp  escala2.cpp
PruebaIndividual/: CMakeLists.txt  fractal_mpi.cpp  main.cpp
julia2/: build.gradle.kts  settings.gradle.kts
julia2/gradle/wrapper/: gradle-wrapper.properties
julia2/src/main/java/paralela/: FPSCounter.java  FractalCpu.java  FractalDll.java  FractalHilos.java  FractalParams.java  FractalSimd.java  fractalMain.java
